--- a/styles.css
+++ b/styles.css
@@ -19,84 +19,87 @@
  a {
      text-decoration: none;
 }
-
- .navbar {
-     display: flex;
-     justify-content: space-between;
-     align-items: center;
-     margin-left: 30px;
-     margin-right: 10px;
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 30px;
+    margin-right: 10px;
 }
- .hamburger {
-     display: none;
+.hamburger {
+    display: none;
 }
- .bar {
-     display: block;
-     width: 25px;
-     height: 3px;
-     margin: 5px auto;
-     -webkit-transition: all 0.3s ease-in-out;
-     transition: all 0.3s ease-in-out;
-     background-color: var(--text);
+.bar {
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    background-color: var(--text);
 }
- .nav-menu {
-     display: flex;
-     justify-content: space-between;
-     align-items: center;
+.nav-menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
- .nav-item {
-     margin-left: 5rem;
-     padding: 10px;
-     margin: 5px;
-     min-width: 100px;
-     text-align: center;
-     border-radius: 10px;
+.nav-item {
+    margin-left: 5rem;
+    padding: 10px;
+    margin: 5px;
+    min-width: 100px;
+    text-align: center;
+    border-radius: 10px;
 }
 
 .nav-item:hover {
-    background-color: var(--purple);
+   background-color: var(--purple);
 }
 
- .nav-link{
-     font-size: 1.6rem;
-     font-weight: 400;
-     color: var(--text);
+.nav-link{
+    font-size: 1.6rem;
+    font-weight: 400;
+    color: var(--text);
 }
 
- .nav-logo {
-     font-size: 2.1rem;
-     font-weight: 500;
+@media only screen and (max-width: 768px) {
+    .nav-menu {
+        position: fixed;
+        left: -100%;
+        top: 5rem;
+        flex-direction: column;
+        background-color: var(--bg);
+        width: 100%;
+        border-radius: 10px;
+        text-align: center;
+        transition: 0.3s;
+        box-shadow:
+            0 10px 27px rgba(0, 0, 0, 0.05);
+    }
+
+    .nav-menu.active {
+        left: 0;
+    }
+
+    .nav-item {
+        margin: 2.5rem 0;
+    }
+
+    .hamburger {
+        display: block;
+        cursor: pointer;
+    }
+
+    .hamburger.active .bar:nth-child(2) {
+    opacity: 0;
 }
- @media only screen and (max-width: 768px) {
-     .nav-menu {
-         position: fixed;
-         left: -100%;
-         top: 5rem;
-         flex-direction: column;
-         background-color: var(--bg);
-         width: 100%;
-         border-radius: 10px;
-         text-align: center;
-         transition: 0.3s;
-         box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
-         .hamburger.active .bar:nth-child(2) {
-             opacity: 0;
-        }
-         .hamburger.active .bar:nth-child(1) {
-             transform: translateY(8px) rotate(45deg);
-        }
-         .hamburger.active .bar:nth-child(3) {
-             transform: translateY(-8px) rotate(-45deg);
-        }
-    }
-     .nav-menu.active {
-         left: 0;
-    }
-     .nav-item {
-         margin: 2.5rem 0;
-    }
-     .hamburger {
-         display: block;
-         cursor: pointer;
-    }
+
+.hamburger.active .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+}
+
+.hamburger.active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+}
+
 }
