--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-left: 30px;
     margin-right: 10px;
 }
 .hamburger {
@@ -43,6 +42,12 @@
     justify-content: space-between;
     align-items: center;
 }
+
+.nav-logo{
+  margin-top: 10px;
+  margin-left: 10px;
+}
+
 .nav-item {
     margin-left: 5rem;
     padding: 10px;
