--- a/styles.css
+++ b/styles.css
@@ -59,10 +59,10 @@
 
 .nav-item:hover {
    background-color: var(--purple);
+   transition: 0.3s;
 }
 
 .nav-link{
-    font-size: 1.6rem;
     font-weight: 400;
     color: var(--text);
 }
@@ -105,6 +105,10 @@
 
 .hamburger.active .bar:nth-child(3) {
     transform: translateY(-8px) rotate(-45deg);
+}
+
+.nav-link{
+    font-size: 1.6rem;
 }
 
 }
