--- a/styles.css
+++ b/styles.css
@@ -112,3 +112,51 @@
 }
 
 }
+
+
+svg {
+    display: block;
+    font-size: 10.5em;
+    font-family: 'Inter', sans-serif;
+    width: 960px;
+    height: 300px;
+    margin: 0 auto;
+}
+
+.text-copy {
+    fill: none;
+    stroke: white;
+    stroke-dasharray: 6% 29%;
+    stroke-width: 5px;
+    stroke-dashoffset: 0%;
+    animation: stroke-offset 5.5s infinite linear;
+}
+
+.text-copy:nth-child(1){
+	stroke: var(--purple);
+	animation-delay: -1;
+}
+
+.text-copy:nth-child(2){
+	stroke: var(--purple);
+	animation-delay: -2s;
+}
+
+.text-copy:nth-child(3){
+	stroke: #B981EE;
+	animation-delay: -3s;
+}
+
+.text-copy:nth-child(4){
+	stroke: #541490;
+	animation-delay: -4s;
+}
+
+.text-copy:nth-child(5){
+	stroke: #340C5A;
+	animation-delay: -5s;
+}
+
+@keyframes stroke-offset{
+	100% {stroke-dashoffset: -35%;}
+}
